--- a/style.css
+++ b/style.css
@@ -5,11 +5,8 @@ body{
     flex-flow: column nowrap;
 }
 
-header,
-main{
-    text-align: center;
-    max-width: 80em;
-    margin: 1em 1em;
+header{
+    max-width: 90%;
 }
 
 .header{
@@ -19,6 +16,8 @@ main{
 table{
     table-layout: fixed;
     width: 100%;
+    margin-top: 1em;
+    margin-bottom: 1em;
 }
 
 th > a{
@@ -31,22 +30,19 @@ th > a:hover{
     color: hsl(197, 100%, 30%);
 }
 
-div{
-    text-align: center;
-}
-
 div > img{
     width: 100%;
     aspect-ratio: 5 / 2;
 }
 
 .main-image{
+    text-align: center;
     position: relative;
 }
 
 .main-image .main-banner{
     position: absolute;
-    bottom: 20%;
+    bottom: 10%;
 }
 
 .main-banner{
@@ -69,4 +65,60 @@ div > img{
 .main-banner a:hover{
         color: hsl(197, 100%, 30%);
         border: .1em solid hsl(197, 100%, 30%);
+}
+
+main{
+    max-width: 80%;
+    padding-top: 1em;
+    padding-bottom: 3em;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+}
+
+h2{
+    font-size: 2em;
+}
+
+.feature{
+    padding-top: 1em;
+    padding-right: 1em;
+}
+
+.feature > p {
+    font-size: 16px;
+    padding-top: 1em;
+    padding-bottom: 2em;
+}
+
+.feature a{
+    color: black;
+    text-decoration: none;
+    border: .1em solid black;
+    padding: .5em;
+}
+
+.feature a:hover{
+    color: hsl(197, 100%, 30%);
+    border: .1em solid hsl(197, 100%, 30%);
+}
+
+.feature h3{
+    padding-top: 1em;
+}
+
+.feat-1{
+    grid-row: 2 / span 1;
+    grid-column: 1 / span 1;
+}
+.feat-2{
+    grid-row: 2 / span 1;
+    grid-column: 2 / span 1;
+}
+.feat-3{
+    grid-row: 3 / span 1;
+    grid-column: 1 / span 1;
+}
+.feat-4{
+    grid-row: 3 / span 1;
+    grid-column: 2 / span 1;
 }
