--- a/style.css
+++ b/style.css
@@ -5,29 +5,74 @@ body{
     flex-flow: column nowrap;
 }
 
-header{
-    max-width: 90%;
+nav{
+    align-items: initial;
+    padding-top: 1em;
+    display: flex;  
+    width: 80%;
 }
 
-.header{
+nav > ul{
+    display: flex;
+    flex-flow: row nowrap;
+    padding-left: 1em;
+}
+
+@media (max-width: 700px) {
+    nav > ul{
+        display: flex;
+        flex-flow: column nowrap;
+    }
+}
+
+.title{
     font-size: 2em;
 }
 
-table{
-    table-layout: fixed;
+ul{
     width: 100%;
-    margin-top: 1em;
-    margin-bottom: 1em;
+    padding-top: 1em;
+    padding-bottom: 1em;
 }
 
-th > a{
+li > a{
+    font-weight: bold;
+    text-decoration: none;
+    color: black;
+    padding-left: 1em;
+}
+
+li > a:hover{
+    color: hsl(197, 100%, 30%);
+}
+
+.interactives{
+    display: flex;
+    flex-flow: row nowrap;
+}
+
+.interactives > a{
     font-weight: bold;
     text-decoration: none;
     color: black;
 }
 
-th > a:hover{
+.interactives > a:hover{
     color: hsl(197, 100%, 30%);
+}
+
+.interactives a + a{
+    margin-left: 1em;
+}
+
+@media (max-width: 700px) {
+    .interactives{
+        display: flex;
+        flex-flow: column nowrap;
+    }
+    .interactives a + a{
+        margin-left: 0em;
+    }
 }
 
 div > img{
